--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 
-<link>
-<title>Abyss Printer Store</title>
-<link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
-</link>
-</head>
+<html>
+    <head>
+        <link>
+        <title>Abyss Printer Store</title>
+        <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
+        </link>
+    </head>
 
 <body>
-    <div id=″container″>
-        <div id="header">
-            <img id="logo" src="Images\ShopLogo.png" title="store logo" alt="welcome to the abyss" width="200"/>
-            Welcome To The Abyss Store For Printers
+    <div id="container">
+        <div id="header"> 
+            <div ><img id="logo" src="Images\ShopLogo.png" alt="abyss logo" width="100px" height="100px"/></div>
+
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="printerShopping.html">Shop</a></li>
+                    <li><a href="buyPage.html">Buy</a></li>
+                    <li><a href="form.html">Feedback</a></li>
+                </ul>
+            </nav>
         </div>
-        <div id=″content″>
-            <div class=″col1″> Column 1 </div>
-            <div class=″col2″> Column 2 </div>
-            <div class=″col3″> Column 3 </div>
+        <div id="content">		
+            <div class="col1"></div>
+            <div class="col3"> Column 3 </div>
+            <div class="col2"> Column 2 </div>
         </div>
-        <div id=″footer″> Footer </div>
+        <div id="footer">© Copyright 2021 abysswalkers Compeny </div>
     </div>
 </body>
+
+
+</html>
