changes: added a current class that will be used on the currant page to highlight what page we are on next task: do index page content

--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -15,7 +15,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a class = "current" href="index.html">Home</a></li>
                     <li><a href="printerShopping.html">Shop</a></li>
                     <li><a href="buyPage.html">Buy</a></li>
                     <li><a href="form.html">Feedback</a></li>
