--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -27,7 +27,7 @@
             <div class="col3"> Column 3 </div>
             <div class="col2"> Column 2 </div>
         </div>
-        <div id="footer">© Copyright 2021 abysswalkers Compeny </div>
+        <div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
     </div>
 </body>
 
