changes: the index page is mostly done with a link to some random shop but the side banners are empty and paragraphs may need better organization next tasks: the remaining three pages content

--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <link>
-        <title>Abyss Printer Store</title>
-        <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
-        </link>
-    </head>
+
+<head>
+    <link>
+    <title>Abyss Printer Store</title>
+    <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
+    </link>
+</head>
 
 <body>
     <div id="container">
-        <div id="header"> 
-            <div ><img id="logo" src="Images\ShopLogo.png" alt="abyss logo" width="100px" height="100px"/></div>
-
+        <div id="header">
+            <div><img id="logo" src="Images\ShopLogo.png" alt="abyss logo" width="100px" height="100px" /></div>
             <nav>
                 <ul>
-                    <li><a class = "current" href="index.html">Home</a></li>
+                    <li><a class="current" href="index.html">Home</a></li>
                     <li><a href="printerShopping.html">Shop</a></li>
                     <li><a href="buyPage.html">Buy</a></li>
                     <li><a href="form.html">Feedback</a></li>
                 </ul>
             </nav>
         </div>
-        <div id="content">		
+        <div id="content">
             <div class="col1"></div>
-            <div class="col3"> Column 3 </div>
-            <div class="col2"> Column 2 </div>
+            <div class="col3"> </div>
+
+            <div class="col2">
+                <p>
+                    
+                    <h3>Welcome To Abyss Printer Store</h3>
+                    <p>
+                        we welcome you to the most unique printer store on the internet
+                    </p>
+
+                    <h2>why you might ask?</h2>
+
+                    <p>
+                        well we specialize in old school printers from the good old days
+                    </p>
+
+                    <p>
+                        Our<a id="locationLink" href="https://goo.gl/maps/xkGogorMDA5tdUvd9" target="_blank"> Location </a>
+                    </p>
+                </p>
+            </div>
+
+
         </div>
         <div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
     </div>
