changed the nav tag to div per dr orders and formatted the file and tried to add a logo to the header but wasn't successful

--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -5,6 +5,7 @@
 <head>
     <link>
     <title>Abyss Printer Store</title>
+    <img src="Images\ShopLogo.png" alt="abyss shops" height="30" width="30"/>
     <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
     </link>
 </head>
@@ -13,14 +14,14 @@
     <div id="container">
         <div id="header">
             <div><img id="logo" src="Images\ShopLogo.png" alt="abyss logo" width="100px" height="100px" /></div>
-            <nav>
+            <div class="nav">
                 <ul>
                     <li><a class="current" href="index.html">Home</a></li>
                     <li><a href="printerShopping.html">Shop</a></li>
                     <li><a href="buyPage.html">Buy</a></li>
                     <li><a href="form.html">Feedback</a></li>
                 </ul>
-            </nav>
+            </div>
         </div>
         <div id="content">
             <div class="col1"></div>
