--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -5,7 +5,7 @@
 <head>
     <link>
     <title>Abyss Printer Store</title>
-    <img src="Images\ShopLogo.png" alt="abyss shops" height="30" width="30"/>
+    <link rel="shortcut icon" href="Images\ShopLogo.png"/>
     <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
     </link>
 </head>
