--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -4,6 +4,7 @@
     <head>
         <link>
         <title>Abyss Printer Store</title>
+        <link rel="shortcut icon" href="Images\ShopLogo.png"/>
         <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
         </link>
     </head>
