added embedded link to the location in the index page

--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -5,7 +5,7 @@
 <head>
     <link>
     <title>Abyss Printer Store</title>
-    <link rel="shortcut icon" href="Images\ShopLogo.png"/>
+    <link rel="shortcut icon" href="Images\ShopLogo.png">
     <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
     </link>
 </head>
@@ -44,6 +44,9 @@
                     <p>
                         Our<a id="locationLink" href="https://goo.gl/maps/xkGogorMDA5tdUvd9" target="_blank"> Location </a>
                     </p>
+
+                    <div><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59425.4201317751!2d39.7888126!3d21.425756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c21b0ed58b5191%3A0x246cb304e623cd66!2z2YXYsdmD2LIg2K_YqNmKINmE2YTZg9mF2KjZitmI2KrYsQ!5e0!3m2!1sen!2ssa!4v1635769218988!5m2!1sen!2ssa"
+                         width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
                 </p>
             </div>
 
