--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <link>
-        <title>Abyss Printer Store</title>
-        <link rel="shortcut icon" href="Images\ShopLogo.png"/>
-        <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
-        </link>
-    </head>
+
+<head>
+    <link>
+    <title>Abyss Printer Store</title>
+    <link rel="shortcut icon" href="Images\ShopLogo.png">
+    <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
+    </link>
+</head>
 
 <body>
     <div id="container">
-        <div id="header"> 
-            <div ><img id="logo" src="Images\ShopLogo.png" alt="abyss logo" width="100px" height="100px"/></div>
-
-            <nav>
+        <div id="header">
+            <div><img id="logo" src="Images\ShopLogo.png" alt="abyss logo" width="100px" height="100px" /></div>
+            <div class="nav">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a  href="index.html">Home</a></li>
                     <li><a href="printerShopping.html">Shop</a></li>
                     <li><a href="buyPage.html">Buy</a></li>
-                    <li><a class="current" href="form.html">Feedback</a></li>
+                    <li><a  class="current" href="form.html">Feedback</a></li>
                 </ul>
-            </nav>
+            </div>
         </div>
-        <div id="content">		
+        <div id="content">
             <div class="col1"></div>
-            <div class="col3"> Column 3 </div>
-            <div class="col2"> Column 2 </div>
+            <div class="col3"> </div>
+
+            <div class="col2">
+                
+            </div>
+
+
         </div>
-        <div id="footer">© Copyright 2021 abysswalkers Compeny </div>
+        <div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
     </div>
 </body>
 
