--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -32,20 +32,20 @@
                     
                     <h3>Welcome To Abyss Printer Store</h3>
                     <p>
-                        we welcome you to the most unique printer store on the internet
+                        We Welcome You To The Most Unique Printer Store On The Internet
                     </p>
 
-                    <h2>why you might ask?</h2>
+                    <h2>Why You Might Ask?</h2>
 
                     <p>
-                        well we specialize in old school printers from the good old days
+                        Well We Specialize In Old School Printers From The Good Old Days
                     </p>
 
                     <p>
-                        Our<a id="locationLink" href="https://goo.gl/maps/xkGogorMDA5tdUvd9" target="_blank"> Location </a>
+                        We Welcome You All From 9 AM Till 5 PM At Our<a id="locationLink" href="https://goo.gl/maps/4vpxJQy5bLALvTDp6" target="_blank"> Branch </a>
                     </p>
 
-                    <div><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59425.4201317751!2d39.7888126!3d21.425756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c21b0ed58b5191%3A0x246cb304e623cd66!2z2YXYsdmD2LIg2K_YqNmKINmE2YTZg9mF2KjZitmI2KrYsQ!5e0!3m2!1sen!2ssa!4v1635769218988!5m2!1sen!2ssa"
+                    <div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d118926.00982075906!2d39.889140999891985!3d21.333219666560712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c207050b786753%3A0xcb8486d2a3c63816!2sDesktop!5e0!3m2!1sen!2ssa!4v1635769911038!5m2!1sen!2ssa"
                          width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
                 </p>
             </div>
