changes: worked on the buy page till the selection of a printer from a combo box next task: add the remaining parts of the buy form and format it in the css file

--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -28,6 +28,36 @@
             <div class="col3"> </div>
 
             <div class="col2">
+                <form action="process.php" method="post">
+                    <h1 id="shoppingCart">Shopping Cart</h1>
+
+                    <label>
+                        <div>Name:</div><input type="text" name="name" placeholder="Enter Your Name">
+                    </label>
+
+                    <label>
+                        <div>Email:</div><input type="email" name="email" placeholder="Enter Your Email">
+                    </label>
+
+                    <label>
+                        <div>Password:</div><input type="password" name="password" placeholder="Enter Your Password"/>
+                    </label>
+
+                    <label><div>Choose A Printer</div><select name="printer">
+                        <option value="" disabled selected="selected">Select A Printer </option>
+                        <option>Epson EcoTank L805 6-color Color Inkjet Printer 1549SR</option>
+                        <option>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer 1099SR</option>
+                        <option>Canon PIXMA MG2540S All-in-One Multi-function Machine (Copy/Print/Scan) 129SR</option>
+                        <option>Canon PIXMA TS7440 Multi-function Machine (Copy/Print/Scan) 269SR</option>
+                        <option>HP Color LaserJet Pro MFP M283fdw Multi-function Machine (Copy/Fax/Print/Scan) 1899SR</option>
+                        <option>Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine (Copy/Print/Scan) 1049SR</option>
+                        <option>Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine (Copy/Print/Scan) 209SR</option>
+                        <option>Epson EcoTank L5190 All-in-One Multi-function Machine (Copy/Fax/Print/Scan) 1599SR</option>
+                    </select>
+                       
+                    </label>
+
+                </form>
                 
             </div>
 
