--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -30,7 +30,7 @@
             <div class="col2">
                 <p>
                     
-                    <h3>Welcome To Abyss Printer Store</h3>
+                    <h2>Welcome To Abyss Printer Store</h2>
                     <p>
                         We Welcome You To The Most Unique Printer Store On The Internet
                     </p>
@@ -38,7 +38,7 @@
                     <h2>Why You Might Ask?</h2>
 
                     <p>
-                        Well We Specialize In Old School Printers From The Good Old Days
+                        Well We Specialize In The Highest Level Printers From Available To Satisfy Our Customers
                     </p>
 
                     <p>
