--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -28,26 +28,28 @@
             <div class="col3"> </div>
 
             <div class="col2">
+
+
+                <h2>Welcome To Abyss Printer Store</h2>
                 <p>
-                    
-                    <h2>Welcome To Abyss Printer Store</h2>
-                    <p>
-                        We Welcome You To The Most Unique Printer Store On The Internet
-                    </p>
-
-                    <h2>Why You Might Ask?</h2>
-
-                    <p>
-                        Well We Specialize In The Highest Level Printers From Available To Satisfy Our Customers
-                    </p>
-
-                    <p>
-                        We Welcome You All From 9 AM Till 5 PM At Our<a id="locationLink" href="https://goo.gl/maps/4vpxJQy5bLALvTDp6" target="_blank"> Branch </a>
-                    </p>
-
-                    <div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d118926.00982075906!2d39.889140999891985!3d21.333219666560712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c207050b786753%3A0xcb8486d2a3c63816!2sDesktop!5e0!3m2!1sen!2ssa!4v1635769911038!5m2!1sen!2ssa"
-                         width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+                    We Welcome You To The Most Unique Printer Store On The Internet
                 </p>
+
+                <h2>Why You Might Ask?</h2>
+
+                <p>
+                    Well We Specialize In The Highest Level Printers From Available To Satisfy Our Customers
+                </p>
+
+                <p>
+                    We Welcome You All From 9 AM Till 5 PM At Our<a id="locationLink"
+                        href="https://goo.gl/maps/4vpxJQy5bLALvTDp6" target="_blank"> Branch </a>
+                </p>
+
+                <div><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d118926.00982075906!2d39.889140999891985!3d21.333219666560712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c207050b786753%3A0xcb8486d2a3c63816!2sDesktop!5e0!3m2!1sen!2ssa!4v1635769911038!5m2!1sen!2ssa"
+                        width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+
             </div>
 
 
