--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -18,52 +18,96 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="printerShopping.html">Shop</a></li>
-                    <li><a  class="current" href="buyPage.html">Buy</a></li>
+                    <li><a class="current" href="buyPage.html">Buy</a></li>
                     <li><a href="form.html">Feedback</a></li>
                 </ul>
             </div>
         </div>
         <div id="content">
-            <div class="col1"></div>
-            <div class="col3"> </div>
 
-            <div class="col2">
+
+            <div class="container">
+                <h1 class="title">Shopping Cart</h1>
+
                 <form action="process.php" method="post">
-                    <h1 id="shoppingCart">Shopping Cart</h1>
+                    <div class="buyerDetails">
+                        <label >
+                            <div class="inputName">Full Name:</div><input class="wide" type="text" name="name"
+                                placeholder="Enter Your Name">
+                        </label>
 
-                    <label>
-                        <div>Name:</div><input type="text" name="name" placeholder="Enter Your Name">
-                    </label>
+                        <label >
+                            <div class="inputName" >Email:</div><input  class="wide" type="email" name="email"
+                                placeholder="Enter Your Email">
+                        </label>
 
-                    <label>
-                        <div>Email:</div><input type="email" name="email" placeholder="Enter Your Email">
-                    </label>
+                        <label >
+                            <div class="inputName">Password:</div><input  class="wide" type="password" name="password"
+                                placeholder="Enter Your Password" />
+                        </label>
 
-                    <label>
-                        <div>Password:</div><input type="password" name="password" placeholder="Enter Your Password"/>
-                    </label>
+                        <label >
+                            <div class="inputName">Confirm Password:</div>
+                            <input  class="wide" type="password" name="confirmPassword" placeholder="Re-enter Your Password" />
+                        </label>
 
-                    <label><div>Choose A Printer</div><select name="printer">
-                        <option value="" disabled selected="selected">Select A Printer </option>
-                        <option>Epson EcoTank L805 6-color Color Inkjet Printer 1549SR</option>
-                        <option>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer 1099SR</option>
-                        <option>Canon PIXMA MG2540S All-in-One Multi-function Machine (Copy/Print/Scan) 129SR</option>
-                        <option>Canon PIXMA TS7440 Multi-function Machine (Copy/Print/Scan) 269SR</option>
-                        <option>HP Color LaserJet Pro MFP M283fdw Multi-function Machine (Copy/Fax/Print/Scan) 1899SR</option>
-                        <option>Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine (Copy/Print/Scan) 1049SR</option>
-                        <option>Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine (Copy/Print/Scan) 209SR</option>
-                        <option>Epson EcoTank L5190 All-in-One Multi-function Machine (Copy/Fax/Print/Scan) 1599SR</option>
-                    </select>
-                       
-                    </label>
+                        <label >
+                            <div class="inputName">Choose A Printer:</div><select name="printer">
+                                <option value="" disabled selected="selected">Select A Printer-- </option>
+                                <option>Epson EcoTank L805 6-color Color Inkjet Printer 1549SR</option>
+                                <option>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer 1099SR</option>
+                                <option>Canon PIXMA MG2540S All-in-One Multi-function Machine (Copy/Print/Scan) 129SR
+                                </option>
+                                <option>Canon PIXMA TS7440 Multi-function Machine (Copy/Print/Scan) 269SR</option>
+                                <option>HP Color LaserJet Pro MFP M283fdw Multi-function Machine (Copy/Fax/Print/Scan)
+                                    1899SR</option>
+                                <option>Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine
+                                    (Copy/Print/Scan)
+                                    1049SR</option>
+                                <option>Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine (Copy/Print/Scan)
+                                    209SR
+                                </option>
+                                <option>Epson EcoTank L5190 All-in-One Multi-function Machine (Copy/Fax/Print/Scan)
+                                    1599SR
+                                </option>
+                            </select>
+                        </label>
+
+                        <div >
+                            <div class="inputName">Payment Method:</div>
+                            <label>Card<input type="radio" name="payment" value="Card" checked="checked"></label>
+
+                            <label>Cash On Delivery<input type="radio" name="payment" value="Cash"></label>
+                        </div>
+
+                        <label >
+                            <div class="inputName">Choose Your City:</div>
+                            <select  class="wide" name="city">
+                                <option class="wide" value=" " disabled selected="selected">Choose Your City--</option>
+                                <option>Makkah</option>
+                                <option>Madina</option>
+                                <option>Jeddah</option>
+                                <option>Riyadh</option>
+                                <option>Tabuk</option>
+                                <option>Jezan</option>
+                            </select>
+                        </label>
+
+                        <div><input id="submit" type="submit" value="Order" /></div>
+                    </div>
+
+
+
+
+
 
                 </form>
-                
+
             </div>
 
 
         </div>
-        <div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
+        <div id="footer">© Copyright 2021 Abysswalkers Company </div>
     </div>
 </body>
 
