--- a/Website Files/printerShopping.html
+++ b/Website Files/printerShopping.html
@@ -24,18 +24,85 @@
             </div>
         </div>
         <div id="content">
-            <div class="col1"></div>
-            <div class="col3"> </div>
+            <div>
+		<div class="pictures">
+		<img src="Images\Canon PIXMA MG2540S All-in-One Multi-function Machine.jpg" width="200px" height="200px"/>
+		<div>Canon PIXMA MG2540S All-in-One Multi-function Machine</div>
+		<a href="buyPage.html">
+		<input type="submit" value="buy now"></a>
+	        </div>
 
-            <div class="col2">
+		<div class="pictures">
+		<img src="Images\Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine.jpg" width="200px" height="200px"/>
+		</br>
+		<div>Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine</div>
+		<a href="buyPage.html">
+		<input type="submit" value="buy now"></a>
+		</div>
+
+		<div class="pictures">
+		<img src="Images\Canon PIXMA TS5340 All-in-One Multi-function Machine.jpg" width="200px" height="200px"/>
+		</br>
+		<div>Canon PIXMA TS5340 All-in-One Multi-function Machine</div>
+		<a href="buyPage.html">
+		<input type="submit" value="buy now"></a>
+		</div>
+
+		<div class="pictures">
+		<img src="Images\Canon PIXMA TS7440 Multi-function Machine.jpg" width="200px" height="200px"/>
+		</br>
+		<div>Canon PIXMA TS7440 Multi-function Machine</div>
+		<a href="buyPage.html">
+		<input type="submit" value="buy now"></a>
+		</div>
+
+		<div class="pictures">
+		<img src="Images\Epson EcoTank L805 6-color Color Inkjet Printer.jpg" width="200px" height="200px"/>
+		</br>
+		<div>Epson EcoTank L805 6-color Color Inkjet Printer</div>
+		<a href="buyPage.html">
+		<input type="submit" value="buy now"></a>
+		</div>
+
+		<div class="pictures">
+		<img src="Images\Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine.jpg" width="200px" height="200px"/>
+		</br>
+		<div>Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine</div>
+		<a href="buyPage.html">
+		<input type="submit" value="buy now"></a>
+		</div>
+
+		<div class="pictures">
+		<img src="Images\Epson EcoTank L5190 All-in-One Multi-function Machine.jpg" width="200px" height="200px"/>
+		</br>
+		<div>Epson EcoTank L5190 All-in-One Multi-function Machine</div>
+		<a href="buyPage.html">
+		<input type="submit" value="buy now"></a>
+		</div>
+
+		<div class="pictures">
+		<img src="Images\HP Color LaserJet Pro MFP M283fdw Multi-function Machine.jpg" width="200px" height="200px"/>
+		</br>
+		<div>HP Color LaserJet Pro MFP M283fdw Multi-function Machine</div>
+		<a href="buyPage.html">
+		<input type="submit" value="buy now"></a>
+		</div>
+
+		<div class="pictures">
+		<img src="Images\HP Neverstop Laser 1000w Monochrome (Black) Laser Printer.jpg" width="200px" height="200px"/>
+		</br>
+		<div>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer</div>
+		<a href="buyPage.html">
+		<input type="submit" value="buy now"></a>
+		</div>
+	     </div>
                 
-            </div>
+        </div>
 
 
         </div>
         <div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
     </div>
 </body>
-
 
 </html>
