fixed the footer as it was in the wrong div and was showing in a wrong way on the page

--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -33,26 +33,26 @@
                     <div class="buyerDetails">
                         <label >
                             <div class="inputName">Full Name:</div><input class="wide" type="text" name="name"
-                                placeholder="Enter Your Name" required/>
+                                placeholder="Enter Your Name" />
                         </label>
 
                         <label >
                             <div class="inputName" >Email:</div><input  class="wide" type="email" name="email"
-                                placeholder="Enter Your Email" required/>
+                                placeholder="Enter Your Email" />
                         </label>
 
                         <label >
                             <div class="inputName">Password:</div><input  class="wide" type="password" name="password"
-                                placeholder="Enter Your Password" required/>
+                                placeholder="Enter Your Password" />
                         </label>
 
                         <label >
                             <div class="inputName">Confirm Password:</div>
-                            <input  class="wide" type="password" name="confirmPassword" placeholder="Re-enter Your Password" required/>
+                            <input  class="wide" type="password" name="confirmPassword" placeholder="Re-enter Your Password" />
                         </label>
 
                         <label >
-                            <div class="inputName">Choose A Printer:</div><select name="printer" required>
+                            <div class="inputName">Choose A Printer:</div><select name="printer" >
                                 <option value="" disabled selected="selected">Select A Printer-- </option>
                                 <option>Epson EcoTank L805 6-color Color Inkjet Printer 1549SR</option>
                                 <option>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer 1099SR</option>
@@ -82,7 +82,7 @@
 
                         <label >
                             <div class="inputName">Choose Your City:</div>
-                            <select  class="wide" name="city" required>
+                            <select  class="wide" name="city" >
                                 <option class="wide" value=" " disabled selected="selected" >Choose Your City--</option>
                                 <option>Makkah</option>
                                 <option>Madina</option>
@@ -93,7 +93,7 @@
                             </select>
                         </label>
 
-                        <div><input id="submit" type="submit" value="Order" /></div>
+                        <div><input class="submit" type="submit" value="Order" /></div>
                     </div>
 
 
