--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -16,22 +16,72 @@
             <div><img id="logo" src="Images\ShopLogo.png" alt="abyss logo" width="100px" height="100px" /></div>
             <div class="nav">
                 <ul>
-                    <li><a  href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="printerShopping.html">Shop</a></li>
                     <li><a href="buyPage.html">Buy</a></li>
-                    <li><a  class="current" href="form.html">Feedback</a></li>
+                    <li><a class="current" href="form.html">Feedback</a></li>
                 </ul>
             </div>
         </div>
         <div id="content">
 
-            <div class="col2">
-                
+
+            <div class="container">
+                <h1 id="feedbackTitle">Feedback</h1>
+
+                <form action="process.php" method="post">
+                    <div class="buyerDetails">
+                        <label>
+                            <div class="inputName">Full Name:</div><input class="wide" type="text" name="name"
+                                placeholder="Enter Your Name" />
+                        </label>
+
+                        <label>
+                            <div class="inputName">Email:</div><input class="wide" type="email" name="email"
+                                placeholder="Enter Your Email" />
+                        </label>
+
+                        <label>
+                            <div class="inputName">Choose Your City:</div>
+                            <select class="wide" name="city">
+                                <option class="wide" value=" " disabled selected="selected">Choose Your City--</option>
+                                <option>Makkah</option>
+                                <option>Madina</option>
+                                <option>Jeddah</option>
+                                <option>Riyadh</option>
+                                <option>Tabuk</option>
+                                <option>Jezan</option>
+                            </select>
+                        </label>
+
+                        <label>
+                            <div class="inputName">Title:</div><input class="wide" type="text" name="feedbackTitle"
+                                placeholder="Enter Your Title Of Feedback Message" />
+                        </label>
+
+                        <label>
+                            <div class="inputName">Message Title:</div><textarea name="feedback body" rows="10"
+                                cols=60%>
+
+                            </textarea>
+                        </label>
+
+                        <div><input class="submit" type="submit" name="feedbackBody" value="Send Feedback"
+                                placeholder="Enter Feedback message Details" /></div>
+                    </div>
+
+
+
+
+
+
+                </form>
+
             </div>
 
 
         </div>
-        <div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
+        <div id="footer">© Copyright 2021 Abysswalkers Company </div>
     </div>
 </body>
 
