--- a/Website Files/printerShopping.html
+++ b/Website Files/printerShopping.html
@@ -29,7 +29,7 @@
 		<img src="Images\Canon PIXMA MG2540S All-in-One Multi-function Machine.jpg" width="200px" height="200px"/>
 		<div>Canon PIXMA MG2540S All-in-One Multi-function Machine</div>
 		<a href="buyPage.html">
-		<input type="submit" value="buy now"></a>
+		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
 	        </div>
 
 		<div class="pictures">
@@ -37,7 +37,7 @@
 		</br>
 		<div>Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine</div>
 		<a href="buyPage.html">
-		<input type="submit" value="buy now"></a>
+		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
 		</div>
 
 		<div class="pictures">
@@ -45,7 +45,7 @@
 		</br>
 		<div>Canon PIXMA TS5340 All-in-One Multi-function Machine</div>
 		<a href="buyPage.html">
-		<input type="submit" value="buy now"></a>
+		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
 		</div>
 
 		<div class="pictures">
@@ -53,7 +53,7 @@
 		</br>
 		<div>Canon PIXMA TS7440 Multi-function Machine</div>
 		<a href="buyPage.html">
-		<input type="submit" value="buy now"></a>
+		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
 		</div>
 
 		<div class="pictures">
@@ -61,7 +61,7 @@
 		</br>
 		<div>Epson EcoTank L805 6-color Color Inkjet Printer</div>
 		<a href="buyPage.html">
-		<input type="submit" value="buy now"></a>
+		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
 		</div>
 
 		<div class="pictures">
@@ -69,7 +69,7 @@
 		</br>
 		<div>Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine</div>
 		<a href="buyPage.html">
-		<input type="submit" value="buy now"></a>
+		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
 		</div>
 
 		<div class="pictures">
@@ -77,7 +77,7 @@
 		</br>
 		<div>Epson EcoTank L5190 All-in-One Multi-function Machine</div>
 		<a href="buyPage.html">
-		<input type="submit" value="buy now"></a>
+		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
 		</div>
 
 		<div class="pictures">
@@ -85,7 +85,7 @@
 		</br>
 		<div>HP Color LaserJet Pro MFP M283fdw Multi-function Machine</div>
 		<a href="buyPage.html">
-		<input type="submit" value="buy now"></a>
+		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
 		</div>
 
 		<div class="pictures">
@@ -93,15 +93,14 @@
 		</br>
 		<div>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer</div>
 		<a href="buyPage.html">
-		<input type="submit" value="buy now"></a>
+		<input class ="shoppingPageBuyButton"type="submit" value="buy now"></a>
 		</div>
 	     </div>
                 
         </div>
 
-
+		<div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
         </div>
-        <div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
     </div>
 </body>
 
