slight modifications to the html deleting errors from the html validator and the unneeded br tags and the badly used link tags, and removed the underline under all anchor tags and will submit file now

--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -3,11 +3,10 @@
 <html>
 
 <head>
-    <link>
+   
     <title>Abyss Printer Store</title>
     <link rel="shortcut icon" href="Images\ShopLogo.png">
     <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
-    </link>
 </head>
 
 <body>
@@ -66,8 +65,7 @@
                             </textarea>
                         </label>
 
-                        <div><input class="submit" type="submit" name="feedbackBody" value="Send Feedback"
-                                placeholder="Enter Feedback message Details" /></div>
+                        <div><input class="submit" type="submit" name="feedbackBody" value="Send Feedback" /></div>
                     </div>
 
 
