--- a/Website Files/printerShopping.html
+++ b/Website Files/printerShopping.html
@@ -3,105 +3,110 @@
 <html>
 
 <head>
-    <link>
-    <title>Abyss Printer Store</title>
-    <link rel="shortcut icon" href="Images\ShopLogo.png">
-    <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
-    </link>
+	<title>Abyss Printer Store</title>
+	<link rel="shortcut icon" href="Images\ShopLogo.png">
+	<link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
 </head>
 
 <body>
-    <div id="container">
-        <div id="header">
-            <div><img id="logo" src="Images\ShopLogo.png" alt="abyss logo" width="100px" height="100px" /></div>
-            <div class="nav">
-                <ul>
-                    <li><a  href="index.html">Home</a></li>
-                    <li><a  class="current" href="printerShopping.html">Shop</a></li>
-                    <li><a href="buyPage.html">Buy</a></li>
-                    <li><a href="form.html">Feedback</a></li>
-                </ul>
-            </div>
-        </div>
-        <div id="content">
-            <div>
-		<div class="pictures">
-		<img src="Images\Canon PIXMA MG2540S All-in-One Multi-function Machine.jpg" width="200px" height="200px"/>
-		<div>Canon PIXMA MG2540S All-in-One Multi-function Machine</div>
-		<a href="buyPage.html">
-		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
-	        </div>
-
-		<div class="pictures">
-		<img src="Images\Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine.jpg" width="200px" height="200px"/>
-		</br>
-		<div>Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine</div>
-		<a href="buyPage.html">
-		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
+	<div id="container">
+		<div id="header">
+			<div><img id="logo" src="Images\ShopLogo.png" alt="abyss logo" width="100px" height="100px" /></div>
+			<div class="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a class="current" href="printerShopping.html">Shop</a></li>
+					<li><a href="buyPage.html">Buy</a></li>
+					<li><a href="form.html">Feedback</a></li>
+				</ul>
+			</div>
 		</div>
+		<div id="content">
+			<div>
+				<div class="pictures">
+					<img src="Images\Canon PIXMA MG2540S All-in-One Multi-function Machine.jpg" width="200px"
+						height="200px" />
+					<div>Canon PIXMA MG2540S All-in-One Multi-function Machine</div>
+					<a href="buyPage.html">
+						<input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+				</div>
 
-		<div class="pictures">
-		<img src="Images\Canon PIXMA TS5340 All-in-One Multi-function Machine.jpg" width="200px" height="200px"/>
-		</br>
-		<div>Canon PIXMA TS5340 All-in-One Multi-function Machine</div>
-		<a href="buyPage.html">
-		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
-		</div>
+				<div class="pictures">
+					<img src="Images\Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine.jpg" width="200px"
+						height="200px" />
 
-		<div class="pictures">
-		<img src="Images\Canon PIXMA TS7440 Multi-function Machine.jpg" width="200px" height="200px"/>
-		</br>
-		<div>Canon PIXMA TS7440 Multi-function Machine</div>
-		<a href="buyPage.html">
-		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
-		</div>
+					<div>Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine</div>
+					<a href="buyPage.html">
+						<input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+				</div>
 
-		<div class="pictures">
-		<img src="Images\Epson EcoTank L805 6-color Color Inkjet Printer.jpg" width="200px" height="200px"/>
-		</br>
-		<div>Epson EcoTank L805 6-color Color Inkjet Printer</div>
-		<a href="buyPage.html">
-		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
-		</div>
+				<div class="pictures">
+					<img src="Images\Canon PIXMA TS5340 All-in-One Multi-function Machine.jpg" width="200px"
+						height="200px" />
 
-		<div class="pictures">
-		<img src="Images\Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine.jpg" width="200px" height="200px"/>
-		</br>
-		<div>Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine</div>
-		<a href="buyPage.html">
-		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
-		</div>
+					<div>Canon PIXMA TS5340 All-in-One Multi-function Machine</div>
+					<a href="buyPage.html">
+						<input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+				</div>
 
-		<div class="pictures">
-		<img src="Images\Epson EcoTank L5190 All-in-One Multi-function Machine.jpg" width="200px" height="200px"/>
-		</br>
-		<div>Epson EcoTank L5190 All-in-One Multi-function Machine</div>
-		<a href="buyPage.html">
-		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
-		</div>
+				<div class="pictures">
+					<img src="Images\Canon PIXMA TS7440 Multi-function Machine.jpg" width="200px" height="200px" />
 
-		<div class="pictures">
-		<img src="Images\HP Color LaserJet Pro MFP M283fdw Multi-function Machine.jpg" width="200px" height="200px"/>
-		</br>
-		<div>HP Color LaserJet Pro MFP M283fdw Multi-function Machine</div>
-		<a href="buyPage.html">
-		<input class ="shoppingPageBuyButton" type="submit" value="buy now"></a>
-		</div>
+					<div>Canon PIXMA TS7440 Multi-function Machine</div>
+					<a href="buyPage.html">
+						<input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+				</div>
 
-		<div class="pictures">
-		<img src="Images\HP Neverstop Laser 1000w Monochrome (Black) Laser Printer.jpg" width="200px" height="200px"/>
-		</br>
-		<div>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer</div>
-		<a href="buyPage.html">
-		<input class ="shoppingPageBuyButton"type="submit" value="buy now"></a>
+				<div class="pictures">
+					<img src="Images\Epson EcoTank L805 6-color Color Inkjet Printer.jpg" width="200px"
+						height="200px" />
+
+					<div>Epson EcoTank L805 6-color Color Inkjet Printer</div>
+					<a href="buyPage.html">
+						<input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+				</div>
+
+				<div class="pictures">
+					<img src="Images\Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine.jpg"
+						width="200px" height="200px" />
+
+					<div>Epson EcoTank L4160 Duplex Ink Tank System Multi-function Machine</div>
+					<a href="buyPage.html">
+						<input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+				</div>
+
+				<div class="pictures">
+					<img src="Images\Epson EcoTank L5190 All-in-One Multi-function Machine.jpg" width="200px"
+						height="200px" />
+
+					<div>Epson EcoTank L5190 All-in-One Multi-function Machine</div>
+					<a href="buyPage.html">
+						<input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+				</div>
+
+				<div class="pictures">
+					<img src="Images\HP Color LaserJet Pro MFP M283fdw Multi-function Machine.jpg" width="200px"
+						height="200px" />
+
+					<div>HP Color LaserJet Pro MFP M283fdw Multi-function Machine</div>
+					<a href="buyPage.html">
+						<input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+				</div>
+
+				<div class="pictures">
+					<img src="Images\HP Neverstop Laser 1000w Monochrome (Black) Laser Printer.jpg" width="200px"
+						height="200px" />
+
+					<div>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer</div>
+					<a  href="buyPage.html">
+						<input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+				</div>
+			</div>
+
 		</div>
-	     </div>
-                
-        </div>
 
 		<div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
-        </div>
-    </div>
+	</div>
 </body>
 
 </html>
