changed css file to the one requested in the project

--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -6,7 +6,7 @@
    
     <title>Abyss Printer Store</title>
     <link rel="shortcut icon" href="Images\ShopLogo.png">
-    <link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
+    <link rel="stylesheet" type="text/css" href="CSS\styles.css">
 </head>
 
 <body>
