--- a/Website Files/printerShopping.html
+++ b/Website Files/printerShopping.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Abyss Printer Store</title>
 	<link rel="shortcut icon" href="Images\ShopLogo.png">
-	<link rel="stylesheet" type="text/css" href="CSS\websiteStyle.css">
+	<link rel="stylesheet" type="text/css" href="CSS\styles.css">
 </head>
 
 <body>
