--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -34,7 +34,7 @@
                 <h2>Why You Might Ask?</h2>
 
                 <p>
-                    Well We Specialize In The Highest Level Printers From Available To Satisfy Our Customers
+                    Well, We Specialize In The Highest quality Printers, Available for the sole reason of satisfying our Customers
                 </p>
 
                 <p>
