removed some of the fancy stuff as the teacher took away marks for them, added a combo box in the form page as per teacher request

--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -52,6 +52,18 @@
                                 <option>Jezan</option>
                             </select>
                         </label>
+                        <label>
+                            <div class="inputName">Topic:</div>
+                            <select class="wide" name="city">
+                                <option class="wide" value=" " disabled selected="selected">Choose Feedback Topic--</option>
+                                <option>Suggestion</option>
+                                <option>Madina</option>
+                                <option>Complaint</option>
+                                <option>Idea</option>
+                                <option>Help</option>
+                                <option>Other</option>
+                            </select>
+                        </label>
 
                         <label>
                             <div class="inputName">Title:</div><input class="wide" type="text" name="feedbackTitle"
