added login form to index page, added two pictures under titles best seller and newest arrival for more content

--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -24,27 +24,76 @@
         <div id="content">
 
             <div class="col2">
+                <div class="loginForm">
+                    <h1 class="title">Sign In</h1>
+                    <form action="" method="post">
+
+                        <label>
+                            <div class="inputName">Username:</div><input class="wide" type="text" name="username"
+                                placeholder="Enter Your Username" />
+                        </label>
+
+                        <label>
+                            <div class="inputName">Password:</div><input class="wide" type="password" name="password"
+                                placeholder="Enter Your Password" />
+                        </label>
+                        <label>
+                            <div>Remember Me<input type="checkbox" name="Remember Me" /></div>
+                        </label>
 
 
-                <h2>Welcome To Abyss Printer Store</h2>
-                <p>
-                    We Welcome You To The Most Unique Printer Store On The Internet
-                </p>
+                        <div><input class="submit" type="submit" name="login" value="Login" /></div>
 
-                <h2>Why You Might Ask?</h2>
+                    </form>
 
-                <p>
-                    Well, We Specialize In The Highest quality Printers, Available for the sole reason of satisfying our Customers
-                </p>
 
-                <p>
-                    We Welcome You All From 9 AM Till 5 PM At Our<a id="locationLink"
-                        href="https://goo.gl/maps/4vpxJQy5bLALvTDp6" target="_blank"> Branch </a>
-                </p>
+                </div>
 
-                <div><iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d118926.00982075906!2d39.889140999891985!3d21.333219666560712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c207050b786753%3A0xcb8486d2a3c63816!2sDesktop!5e0!3m2!1sen!2ssa!4v1635769911038!5m2!1sen!2ssa"
-                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+                <div>
+                    <h2>Welcome To Abyss Printer Store</h2>
+                    <p>
+                        We Welcome You To The Most Unique Printer Store On The Internet
+                    </p>
+
+                    <h2>Why You Might Ask?</h2>
+
+                    <p>
+                        Well, We Specialize In The Highest quality Printers, Available for the sole reason of satisfying
+                        our Customers
+                    </p>
+
+                    <p>
+                        We Welcome You All From 9 AM Till 5 PM At Our<a id="locationLink"
+                            href="https://goo.gl/maps/4vpxJQy5bLALvTDp6" target="_blank"> Branch </a>
+                    </p>
+
+                    <div><iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d118926.00982075906!2d39.889140999891985!3d21.333219666560712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c207050b786753%3A0xcb8486d2a3c63816!2sDesktop!5e0!3m2!1sen!2ssa!4v1635769911038!5m2!1sen!2ssa"
+                            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="pictures">
+                        <h2>Our Best Seller</h2>
+                        <img src="Images\Canon PIXMA MG2540S All-in-One Multi-function Machine.jpg" width="200px"
+                            height="200px" />
+                        <div>Canon PIXMA MG2540S All-in-One Multi-function Machine</div>
+                        <a href="buyPage.html">
+                            <input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+                    </div>
+                    <div class="pictures">
+                        <h2>Our Newest Arrival</h2>
+                        <img src="Images\Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine.jpg" width="200px"
+                            height="200px" />
+
+                        <div>Canon PIXMA MG3640S Wi-Fi All-In-One Multi-function Machine</div>
+                        <a href="buyPage.html">
+                            <input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
+                    </div>
+                </div>
+
+
 
             </div>
 
