--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -27,30 +27,31 @@
             <div class="container">
                 <h1 class="title">Shopping Cart</h1>
 
-                <form action="process.php" method="post">
+                <form action="#" method="post">
                     <div class="buyerDetails">
-                        <label >
+                        <label>
                             <div class="inputName">Full Name:</div><input class="wide" type="text" name="name"
                                 placeholder="Enter Your Name" />
                         </label>
 
-                        <label >
-                            <div class="inputName" >Email:</div><input  class="wide" type="email" name="email"
+                        <label>
+                            <div class="inputName">Email:</div><input class="wide" type="email" name="email"
                                 placeholder="Enter Your Email" />
                         </label>
 
-                        <label >
-                            <div class="inputName">Password:</div><input  class="wide" type="password" name="password"
+                        <label>
+                            <div class="inputName">Password:</div><input class="wide" type="password" name="password"
                                 placeholder="Enter Your Password" />
                         </label>
 
-                        <label >
+                        <label>
                             <div class="inputName">Confirm Password:</div>
-                            <input  class="wide" type="password" name="confirmPassword" placeholder="Re-enter Your Password" />
+                            <input class="wide" type="password" name="confirmPassword"
+                                placeholder="Re-enter Your Password" />
                         </label>
 
-                        <label >
-                            <div class="inputName">Choose A Printer:</div><select name="printer" >
+                        <label>
+                            <div class="inputName">Choose A Printer:</div><select name="printer">
                                 <option value="" disabled selected="selected">Select A Printer-- </option>
                                 <option>Epson EcoTank L805 6-color Color Inkjet Printer 1549SR</option>
                                 <option>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer 1099SR</option>
@@ -71,17 +72,17 @@
                             </select>
                         </label>
 
-                        <div >
+                        <div>
                             <div class="inputName">Payment Method:</div>
                             <label>Card<input type="radio" name="payment" value="Card" checked="checked"></label>
 
                             <label>Cash On Delivery<input type="radio" name="payment" value="Cash"></label>
                         </div>
 
-                        <label >
+                        <label>
                             <div class="inputName">Choose Your City:</div>
-                            <select  class="wide" name="city" >
-                                <option class="wide" value=" " disabled selected="selected" >Choose Your City--</option>
+                            <select class="wide" name="city">
+                                <option class="wide" value=" " disabled selected="selected">Choose Your City--</option>
                                 <option>Makkah</option>
                                 <option>Madina</option>
                                 <option>Jeddah</option>
