--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <h1 id="feedbackTitle">Feedback</h1>
 
-                <form action="process.php" method="post">
+                <form action="#" method="post">
                     <div class="buyerDetails">
                         <label>
                             <div class="inputName">Full Name:</div><input class="wide" type="text" name="name"
