added the onfocus and onblur calls to all text fields in the index and form page and the method focused turns the background for the text field to yellow and the blurred turns it to the default color i.e. white

--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -6,6 +6,7 @@
     <title>Abyss Printer Store</title>
     <link rel="shortcut icon" href="Images\ShopLogo.png">
     <link rel="stylesheet" type="text/css" href="CSS\styles.css">
+    <script defer type="text/javascript" src="Scripts\script.js"></script>
 </head>
 
 <body>
