added contact us section at the end of the page

--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -28,17 +28,18 @@
                 <div class="loginForm">
                     <h1 class="title">Sign In</h1>
                     <div id='loginMessage'></div>
-                    <form  id="indexForm" action="#" method="post">
+                    <form id="indexForm" action="#" method="post">
 
                         <label>
                             <div class="inputName">Username:</div><input class="wide" type="text" id="loginUsername"
-                                name="username" placeholder="Enter Your Username" onFocus="focused(this)" onBlur="blurred(this)" />
+                                name="username" placeholder="Enter Your Username" onFocus="focused(this)"
+                                onBlur="blurred(this)" />
                         </label>
 
                         <label>
                             <div class="inputName">Password:</div><input class="wide" id="loginPassword" name="password"
-                                placeholder="Enter Your password" type="password" name="password" onFocus="focused(this)"
-                                 onBlur="blurred(this)" />
+                                placeholder="Enter Your password" type="password" name="password"
+                                onFocus="focused(this)" onBlur="blurred(this)" />
                         </label>
                         <label>
                             <div>Remember Me<input type="checkbox" name="Remember Me" /></div>
@@ -94,11 +95,28 @@
                         <a href="buyPage.html">
                             <input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
                     </div>
-                </div>
 
+                    <div id="contactInfo">
+                        <h2>Contact Us:</h2>
+                        <ul>
+                            <li>Email: printerShop@hmail.com</li>
+                            <li>Telephone: 05555555</li>
+                            <li>whatsApp: 05555555</li>
+                        </ul>
+                    </div>
+
+                </div>
+                
+
+
+
+                </div>
+               
 
 
             </div>
+
+
 
 
         </div>
